gcp_india/cic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic
  labels:
    app: cic
spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.1.3"
        args:
          - --ingress-classes
            citrix-tier-1
          - --feature-node-watch
            true
        imagePullPolicy: Always
