gcp_india/cpx_cic.yaml
#Deploy a standalone CPX as an ingress device
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cpx-ingress
spec:
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
      annotations:
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-ingress
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:12.1-51.16"
          securityContext:
             privileged: true
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 9080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: nitro-http
              containerPort: 9080
            - name: nitro-https
              containerPort: 9443
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.1.3"
          args:
            - --ingress-classes
              citrix-tier-2
          imagePullPolicy: Always

---
#Expose the CPX as a ClusterIP service
kind: Service
apiVersion: v1
metadata:
  name: cpx-service
  labels:
    app: cpx-service
spec:
  selector:
    app: cpx-ingress
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---
